# super-monitor-v3

./: .gitignore  Cargo.toml  MIGRATION_GUIDE.md  README.md  REWRITE_SUMMARY.md
src/: main.rs
src/handlers/: mod.rs
src/models/: auth.rs  config.rs  metrics.rs  mod.rs
src/services/: auth.rs  mod.rs  monitor.rs  threat_intel.rs
src/utils/: logging.rs
templates/: base.html  dashboard.html  downloads.html  login.html  settings.html
