[package]
name = "shaydz-super-monitor"
version = "2.0.0"
edition = "2021"
authors = ["ShaydZ Security Team"]
description = "Ultimate Self-Learning Network Defense, Monitoring, and AI Threat Intelligence Dashboard"
license = "MIT"
repository = "https://github.com/shaydz93/shaydz-super-monitor-v2"
keywords = ["security", "monitoring", "network", "threat-intelligence"]
categories = ["network-programming", "command-line-utilities"]
rust-version = "1.70"

[[bin]]
name = "shaydz-monitor"
path = "src/main.rs"

[dependencies]
# Web framework
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "compression-br", "compression-gzip", "compression-deflate"] }

# Templating
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# System monitoring
sysinfo = "0.30"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# HTTP client for threat intel
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# RSS parsing for threat feeds
rss = "2.0"

# Password hashing - replaces bcrypt
argon2 = "0.5"
password-hash = "0.5"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Concurrency
parking_lot = "0.12"  # Better mutex implementation

# Network
tokio-ping = "0.3"
dns-lookup = "2.0"

# Regex for input validation
regex = "1.10"

# Random for simulation
rand = "0.8"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Cookie handling for sessions
tower-cookies = "0.10"

# JSON Web Tokens for auth
jsonwebtoken = "9.2"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
